src/test/deca/syntax/invalid/invalid_identifier.deca
// Resultats :
// Erreur contextuelle
// Ligne 1 : identifiant invalide commençant par un chiffre

int 1abc = 5;
